@@ -504,6 +504,7 @@ tab[selected="true"] label {
     padding-top: 0px;
     padding-right: 0px;
     width: 200px;
+    height: 80px;
 }
 
 .library-menuitem-description {
