@@ -26,6 +26,7 @@ Kiwix 0.9 beta5
 * Add Ctrl+ modifier to Home, Back and Forward buttons to branch to new tabs (ID: 3459481)
 * Improve the Windows installer to run it silently (with command line option /S)
 * Avoid double-checked menu item in language/skin menus in cas of abandoned restart process
+* Improvement of the navigation history management (ID: 3444677)
 
 Kiwix 0.9 beta4
 * Fix regression, menu "last open" where not working anymore
